preventing the products from being clipped on ipad

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,10 @@ $navbar-default-link-color: #fff;
 
 // products
 
+.list-group-item {
+    padding: 8px 12px;
+}
+
 .list-group-item--heating {
   color: #a94442;
   background-color: #f2dede;
@@ -22,11 +26,6 @@ $navbar-default-link-color: #fff;
 .list-group-item--cooling {
   color: #31708f;
   background-color: #d9edf7;
-}
-
-.list-group-item__logo {
-  width:30px;
-  float:left;
 }
 
 // alerts
@@ -46,6 +45,6 @@ $navbar-default-link-color: #fff;
     margin-top: 5px;
   }
   img {
-    max-height: 60px;
+    max-height: 50px;
   }
 }
